--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
