--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,35 @@
     <servlet-class>ru.job4j.dream.servlet.IndexServlet</servlet-class>
   </servlet>
 
+  <servlet>
+    <servlet-name>DownloadServlet</servlet-name>
+    <servlet-class>ru.job4j.dream.servlet.DownloadServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>DeleteServlet</servlet-name>
+    <servlet-class>ru.job4j.dream.servlet.DeleteServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>UploadImageCandidateServlet</servlet-name>
+    <servlet-class>ru.job4j.dream.servlet.UploadPhotoCandidateServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>UploadImageCandidateServlet</servlet-name>
+    <url-pattern>/uploadImageCandidate</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>DeleteServlet</servlet-name>
+    <url-pattern>/delete</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>DownloadServlet</servlet-name>
+    <url-pattern>/download</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>IndexServlet</servlet-name>
