--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,16 @@
     <servlet-class>ru.job4j.dream.servlet.UploadPhotoCandidateServlet</servlet-class>
   </servlet>
 
+  <servlet>
+    <servlet-name>AuthServlet</servlet-name>
+    <servlet-class>ru.job4j.dream.servlet.AuthServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>AuthServlet</servlet-name>
+    <url-pattern>/auth.do</url-pattern>
+  </servlet-mapping>
+
   <servlet-mapping>
     <servlet-name>UploadImageCandidateServlet</servlet-name>
     <url-pattern>/uploadImageCandidate</url-pattern>
