--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -61,13 +61,13 @@
   </servlet>
 
   <servlet>
-    <servlet-name>GreetingServlet</servlet-name>
-    <servlet-class>ru.job4j.dream.servlet.GreetingServlet</servlet-class>
+    <servlet-name>CityServlet</servlet-name>
+    <servlet-class>ru.job4j.dream.servlet.CityServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>GreetingServlet</servlet-name>
-    <url-pattern>/greet</url-pattern>
+    <servlet-name>CityServlet</servlet-name>
+    <url-pattern>/city</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
